--- a/Products.Application/Products.Application.csproj
+++ b/Products.Application/Products.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Products.Contracts\Products.Contracts.csproj" />
+    <ProjectReference Include="..\Products.Domain\Products.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
