--- a/Products.Application/Products.Application.csproj
+++ b/Products.Application/Products.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Products.Contracts\Products.Contracts.csproj" />
     <ProjectReference Include="..\Products.Domain\Products.Domain.csproj" />
     <ProjectReference Include="..\Products.Infrastructure\Products.Infrastructure.csproj" />
