Add middlewares and File logging

--- a/Products.Api/appsettings.Production.json
+++ b/Products.Api/appsettings.Production.json
@@ -4,19 +4,19 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/dev-log.txt",
+          "path": "C:/Logs/products-api/prod-log.txt",
           "rollingInterval": "Day",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Information"
     }
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug"
+      "Default": "Information"
     }
   }
 }
