--- a/Products.Persistence/Products.Persistence.csproj
+++ b/Products.Persistence/Products.Persistence.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Products.Application\Products.Application.csproj" />
     <ProjectReference Include="..\Products.Domain\Products.Domain.csproj" />
-    <ProjectReference Include="..\Products.Infrastructure\Products.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
