InMemory queue added + v2 patch endpoint created

--- a/Products.Api/Products.Api.csproj
+++ b/Products.Api/Products.Api.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Products.Application\Products.Application.csproj" />
     <ProjectReference Include="..\Products.Contracts\Products.Contracts.csproj" />
+    <ProjectReference Include="..\Products.Infrastructure\Products.Infrastructure.csproj" />
     <ProjectReference Include="..\Products.Persistence\Products.Persistence.csproj" />
   </ItemGroup>
 	
